--- a/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -1,5 +1,6 @@
 @version: 4.8
 @include "scl.conf"		# Cisco、PaloAlto、Fortigate などのログのパースも含まれる
+# 書き換えたら make conf_check で構文チェックを実行する
 
 # RFC 5424  :  514/udp  514/tcp
 # Cisco用   : 3514/udp 3514/tcp
@@ -7,15 +8,17 @@
 # fortigate : 5514/udp 5514/tcp
 # fluent_bit から json 構造化ログ
 #           : 6514/tcp
-#
+# AlaxalA用 : 7514/udp 7514/tcp
+# CEF用     :  999/tcp (internal 9999)
+
 options {
   chain-hostnames(off); # ホスト名だけで送られてきたときドメイン名を補完しない
   use-dns(no); use-fqdn(no); dns-cache(no); keep-hostname(yes);
   create-dirs(yes); dir-perm(0755); perm(0644);
 
   frac-digits(6);	# 秒以下の桁数を指定
-  ts-format(rfc3339);   # json 形式で出力するため多分無意味
-
+  ts-format(rfc3339);   # ファイルへ書きだすときの形式を指定 (RFC 3339形式) (マイクロ秒まで)
+                        #  ts-format(iso); だと秒単位まで
   stats(freq(86400));
   threaded(yes);
 };
@@ -43,11 +46,11 @@ source s_rfc5424_octet {
 # ---------------------------------------------------
 # Cisco 機器専用 (3514/udp, 3514/tcp)
 # ---------------------------------------------------
-source s_cisco{
-  # Cisco は独自形式で送信してくるため、flags(no-parse) を使用
+source s_cisco {
+  # Cisco は独自形式で送信してくるため、flags(no-parse, store-raw-message) を使用
   # cisco-parser() が全体をパースする
-  network(ip(0.0.0.0) port(3514) transport("udp") flags(no-parse) log-msg-size(65536));
-  network(ip(0.0.0.0) port(3514) transport("tcp") flags(no-parse) log-msg-size(65536));
+  network(ip(0.0.0.0) port(3514) transport("udp") flags(no-parse, store-raw-message) log-msg-size(65536));
+  network(ip(0.0.0.0) port(3514) transport("tcp") flags(no-parse, store-raw-message) log-msg-size(65536));
 };
 
 # ---------------------------------------------------
@@ -58,12 +61,31 @@ source s_rfc3164 {
   network(ip(0.0.0.0) port(4514) transport("udp") log-msg-size(65536));
   network(ip(0.0.0.0) port(4514) transport("tcp") log-msg-size(65536));
 };
+
 # ---------------------------------------------------
 # TCP/UDP Fortigate 用 (5514/udp)
 # ---------------------------------------------------
 source s_fortigate {
-  network(ip(0.0.0.0) port(5514) transport("udp") flags(no-parse) log-msg-size(65536));
-  network(ip(0.0.0.0) port(5514) transport("tcp") flags(no-parse) log-msg-size(65536));
+  network(ip(0.0.0.0) port(5514) transport("udp") flags(no-parse, store-raw-message) log-msg-size(65536));
+  network(ip(0.0.0.0) port(5514) transport("tcp") flags(no-parse, store-raw-message) log-msg-size(65536));
+};
+
+# ---------------------------------------------------
+# Palo Alto (PAN-OS) 専用 (5515/udp, 5515/tcp)
+# ---------------------------------------------------
+source s_panos {
+  network(
+    port(5515)
+    transport("tcp")
+    flags(no-parse, store-raw-message)
+  );
+  network(
+    port(5515)
+    transport("udp")
+    flags(no-parse, store-raw-message)
+    # UDP does not support multi-line-mode in the same way, but usually UDP packets are one log per packet.
+    # If fragmentation happens, it's handled at IP layer.
+  );
 };
 
 # ---------------------------------------------------
@@ -75,12 +97,35 @@ source s_fluent_bit {
   network(ip(0.0.0.0) port(6514) flags(syslog-protocol) log-msg-size(65536));
 };
 
+# ---------------------------------------------------
+# AlaxalA スイッチ専用 (7514/udp, 7514/tcp)
+# ---------------------------------------------------
+source s_alaxala {
+  network(ip(0.0.0.0) port(7514) transport("udp") log-msg-size(65536));
+  network(ip(0.0.0.0) port(7514) transport("tcp") log-msg-size(65536));
+};
+
+# ---------------------------------------------------
+# CEF ログ受信用 (999/tcp)
+# ---------------------------------------------------
+source s_cef {
+  network(ip(0.0.0.0) port(999) transport("tcp") log-msg-size(65536));
+};
+
+
 #==================================
 # 2. フィルタ (分類担当)
 #==================================
 # FortiGateのIPアドレスでフィルタリング
 filter f_fortigate {
   host("192.168.0.254") or netmask("127.0.0.0/30");
+};
+
+# CentreCOMスイッチのIPアドレスでフィルタリング
+filter f_centrecom {
+  host("172.31.220.99");
+  # 複数のCentreCOMスイッチがある場合は以下のように追加
+  # host("172.31.220.99") or host("172.31.220.100") or netmask("172.31.220.0/24");
 };
 
 #==================================
@@ -221,36 +266,56 @@ parser p_cisco {
   };
 };
 
-# シーケンス番号などの詳細情報も抽出したい場合は p_cisco_alt を使用
-# parser p_cisco_alt {
-#   channel {
-#     # 構造化データを抽出
-#     parser {
-#       regexp-parser(
-#         patterns('^\<(?<pri>[0-9]+)\>(?<seq1>[0-9]+): \[syslog@9 s_sn="(?<seq_num>[0-9]+)"\]: (?<seq2>[0-9]+): (?<remaining_msg>.*)')
-#         flags(store-legacy-msghdr)
-#       );
-#     };
-#     # Cisco メッセージ部分だけを MESSAGE として再設定
-#     rewrite {
-#       set("${remaining_msg}", value("MESSAGE"));
-#       # ホスト名を正しく設定（元の送信元IPアドレスから）
-#       set("${HOST_FROM}", value("HOST"));
-#     };
-#     # Cisco パーサーを適用
-#     parser {
-#       cisco-parser();
-#     };
-#     # 不要なフィールドを削除
-#     rewrite {
-#       unset(value("remaining_msg"));
-#       unset(value("0"));
-#       unset(value("1"));
-#       unset(value("2"));
-#       unset(value("3"));
-#     };
-#   };
-# };
+# ---------------------------------------------------
+# CentreCOM 専用パーサー
+# ---------------------------------------------------
+parser p_centrecom {
+  channel {
+    # 1. CentreCOMフォーマットをパース
+    # <pri>YYYY MMM DD HH:MM:SS hostname program[pid]: message
+    parser {
+      regexp-parser(
+        patterns(
+          # パターン1: program[pid]あり
+          '^\<(?<pri>[0-9]+)\>(?<year>[0-9]{4}) +(?<month>[A-Z][a-z]+) +(?<day>[0-9]+) +(?<time>[0-9]+:[0-9]+:[0-9]+) +(?<centrecom_hostname>[^ ]+) +(?<program>[^\[: ]+)\[(?<pid>[0-9]+)\]: (?<msg>.*)',
+          # パターン2: program のみ ([pid]なし)
+          '^\<(?<pri>[0-9]+)\>(?<year>[0-9]{4}) +(?<month>[A-Z][a-z]+) +(?<day>[0-9]+) +(?<time>[0-9]+:[0-9]+:[0-9]+) +(?<centrecom_hostname>[^ ]+) +(?<program>[^:]+): (?<msg>.*)'
+        )
+      );
+    };
+    
+    # 2. タイムスタンプをパース
+    if ("${year}" ne "") {
+      parser {
+        date-parser(
+          format("%Y %b %d %H:%M:%S")
+          template("${year} ${month} ${day} ${time}")
+          time-zone("Asia/Tokyo")
+        );
+      };
+    };
+    
+    # 3. フィールドを設定
+    rewrite {
+      set("${msg}", value("MESSAGE"));
+      set("${centrecom_hostname}", value("HOST"));
+      set("${program}", value("PROGRAM"));
+      set("${pid}", value(".SDATA.meta.pid") condition("${pid}" ne ""));
+    };
+    
+    # 4. 不要なフィールドを削除
+    rewrite {
+      unset(value("year"));
+      unset(value("month"));
+      unset(value("day"));
+      unset(value("time"));
+      unset(value("centrecom_hostname"));
+      unset(value("msg"));
+      unset(value("pri"));
+      unset(value("pid"));
+    };
+  };
+};
 
 # ---------------------------------------------------
 # FortiGateログ専用パーサー
@@ -258,14 +323,164 @@ parser p_cisco {
 parser p_fortigate {fortigate-parser();};
 
 # ---------------------------------------------------
+# AlaxalA 専用パーサー
+# ---------------------------------------------------
+parser p_alaxala {
+  channel {
+    parser {
+      regexp-parser(
+        patterns(
+          '^(?<log_type>[A-Z]+) +(?<event_date>[0-9]+/[0-9]+) +(?<event_time>[0-9]+:[0-9]+:[0-9]+) +(?<alaxala_severity>[EWID][0-9]) +(?<module>[A-Z]+) +(?<detail>.*)',
+          '^(?<log_type>[A-Z]+) +(?<alaxala_severity>[EWID][0-9]) +(?<module>[A-Z]+) +(?<detail>.*)'
+        )
+        template("${MESSAGE}")
+      );
+    };
+    
+    rewrite {
+      set("${alaxala_severity} ${module}", value("PROGRAM") condition("${alaxala_severity}" ne "" and "${module}" ne ""));
+      set("${detail}", value("MESSAGE") condition("${detail}" ne ""));
+      set("${log_type}", value(".alaxala.log_type") condition("${log_type}" ne ""));
+      set("${event_date}", value(".alaxala.event_date") condition("${event_date}" ne ""));
+      set("${event_time}", value(".alaxala.event_time") condition("${event_time}" ne ""));
+      set("${alaxala_severity}", value(".alaxala.severity") condition("${alaxala_severity}" ne ""));
+      set("${module}", value(".alaxala.module") condition("${module}" ne ""));
+      set("${PID}", value(".alaxala.function_number") condition("${PID}" ne ""));
+    };
+    
+    rewrite {
+      unset(value("log_type"));
+      unset(value("event_date"));
+      unset(value("event_time"));
+      unset(value("alaxala_severity"));
+      unset(value("module"));
+      unset(value("detail"));
+      unset(value("0"));
+      unset(value("1"));
+      unset(value("2"));
+      unset(value("3"));
+      unset(value("4"));
+      unset(value("5"));
+      unset(value("6"));
+    };
+  };
+};
+
+# ---------------------------------------------------
 # JSON形形式を解釈するパーサー
 # ---------------------------------------------------
 parser p_json {json-parser();};
 
+# ---------------------------------------------------
+# Palo Alto (PAN-OS) 専用パーサー
+# ---------------------------------------------------
+parser p_panos {
+  channel {
+    parser {
+      panos-parser(template("${MESSAGE}"));
+    };
+  };
+};
+
+# ---------------------------------------------------
+# CEF Parser
+# ---------------------------------------------------
+parser p_cef {
+  channel {
+    parser {
+      regexp-parser(
+        patterns('^(?:CEF:(?<cef_version>[^\|]+)\|)?(?<device_vendor>[^\|]*)\|(?<device_product>[^\|]*)\|(?<device_version>[^\|]*)\|(?<device_event_class_id>[^\|]*)\|(?<name>[^\|]*)\|(?<severity>[^\|]*)\|(?<cef_extension>.*)')
+        prefix("_cef.")
+      );
+    };
+    # 1.5. 元のMESSAGEを退避 (JSON出力の message フィールド用)
+    rewrite {
+      set("${MESSAGE}", value("saved_message"));
+    };
+    # 2. MESSAGEを拡張フィールド部分に書き換え (以降のKVパース用)
+    rewrite {
+      set("${_cef.cef_extension}", value("MESSAGE"));
+    };
+    # 3. KVペアとしてパース
+    parser {
+      kv-parser(
+        prefix("_cef.")
+        template("${MESSAGE}")
+      );
+    };
+
+    # 4. agentRt があればマイクロ秒に変換してタイムスタンプ用変数を設定
+    rewrite {
+      set("${_cef.agentRt}000", value(".us_timestamp") condition("${_cef.agentRt}" ne ""));
+    };
+
+    # 4. 不要なフィールドの削除
+    rewrite {
+      unset(value("_cef.cef_extension"));
+      unset(value("0"));
+      unset(value("1"));
+      unset(value("2"));
+      unset(value("_cef.0"));
+      unset(value("_cef.1"));
+      unset(value("_cef.2"));
+      unset(value("_cef.3"));
+      unset(value("_cef.4"));
+      unset(value("_cef.5"));
+      unset(value("_cef.6"));
+      unset(value("_cef.7"));
+      unset(value("_cef.8"));
+    };
+  };
+};
+
+# ---------------------------------------------------
+# CEF タイムスタンプ変換用パーサー (Refactored)
+# ---------------------------------------------------
+parser p_cef_timestamp {
+  channel {
+    # eventtime (小文字) と eventTime (CamelCase) の両方をチェックして tmp_epoch にセット
+    if ("${_cef.eventtime}" ne "") {
+         rewrite { set("${_cef.eventtime}", value("tmp_epoch")); };
+    };
+    if ("${_cef.eventTime}" ne "") {
+         rewrite { set("${_cef.eventTime}", value("tmp_epoch")); };
+    };
+
+    if ("${tmp_epoch}" ne "") {
+        parser {
+            # 13桁のミリ秒を 秒(10桁)とミリ秒(3桁)に分割
+            regexp-parser(
+                patterns('^(?<tmp_sec>[0-9]{10})(?<tmp_msec>[0-9]{3})')
+                template("${tmp_epoch}")
+            );
+            # メッセージのタイムスタンプとしてパース (これで $ISODATE が更新される)
+            date-parser(
+                format("%s.%f")
+                template("${tmp_sec}.${tmp_msec}")
+            );
+        };
+        # 更新された $ISODATE を新しいフィールドにセット
+        rewrite {
+            set("${ISODATE}", value("_cef.eventtime_iso"));
+            # 一時変数の削除
+            unset(value("tmp_sec"));
+            unset(value("tmp_msec"));
+            unset(value("tmp_epoch"));
+        };
+    };
+  };
+};
+
+filter f_paloalto {
+  message(",SYSTEM,") or message(",TRAFFIC,") or message(",THREAT,") or message(",CONFIG,");
+};
+
 #==================================
 # 4. 宛先 (送信)
 #==================================
+# ---------------------------------------------------
 # OpenObserve に送る
+# ---------------------------------------------------
 destination d_openobserve {
   openobserve-log(
     persist_name("openobserve")
@@ -276,22 +491,22 @@ destination d_openobserve {
     user("root@root.root")
     password("root")
     time-zone("Asia/Tokyo")
-
-    # scl.conf のFortigateパーサーで追加された .fortigate.* フィールドの JSON 化に必要
-    # 全ての名前-値ペアをJSON形式で送信、ログに含まれるタイムスタンプを追加
     record("--scope rfc5424 --scope all-nv-pairs --exclude DATE --key ISODATE @timestamp=${ISODATE}")
-
     disk-buffer(
       reliable(yes)
-      mem-buf-size(1048576)      # メモリバッファサイズ: 1MB (一時的にメモリに保持するログのサイズ)
-      disk-buf-size(104857600)   # ディスクバッファサイズ: 100MB (OpenObserveが停止時のログ保持用)
+      mem-buf-size(1048576)
+      disk-buf-size(104857600)
       dir("/buffer/to_OpenObserve/")
     )
     workers(4)
   );
 };
 
-# Cisco ログ専用ファイル出力
+# ---------------------------------------------------
+# Cisco ログ用デスティネーション
+# ---------------------------------------------------
+
+# 1. Cisco ログ専用ファイル出力
 destination d_cisco_file {
   file(
     "/config/log/cisco.log"
@@ -302,7 +517,7 @@ destination d_cisco_file {
   );
 };
 
-# Cisco デバッグ用 - RAW メッセージを出力
+# 2. Cisco デバッグ用 - RAW メッセージを出力
 destination d_cisco_raw {
   file(
     "/config/log/cisco_raw.log"
@@ -311,7 +526,69 @@ destination d_cisco_raw {
   );
 };
 
+# ---------------------------------------------------
+# Palo Alto (PAN-OS) ログ用デスティネーション
+# ---------------------------------------------------
+
+# 1. Palo Alto デバッグ用 (無効化)
+# destination d_panos_debug {
+#   file(
+#     "/config/log/panos_debug.log"
+#     template("TS:${ISODATE} HOST:${HOST} PROG:${PROGRAM} MSG:${MESSAGE}\nRAW:${RAWMSG}\n---\n")
+#     create-dirs(yes)
+#   );
+# };
+
+# 2. Palo Alto 生ログ記録用 (無効化)
+# destination d_panos_raw {
+#   file(
+#     "/config/log/panos_raw.log"
+#     template("${MESSAGE}\n")
+#     create-dirs(yes)
+#   );
+# };
+
+# ---------------------------------------------------
+# CEFログ用デスティネーション
+# ---------------------------------------------------
+
+# 1. CEF デバッグ用 (ファイル出力 / 無効化中)
+destination d_cef_debug {
+  file(
+    "/config/log/cef_debug.log"
+    # format-json のオプション調整: @timestamp を agentRt優先に変更
+    template("JSON:$(format-json --key _cef.* --rekey . --exclude DATE --key ISODATE @timestamp=$(if (\"${.us_timestamp}\" != \"\") \"${.us_timestamp}\" \"${ISODATE}\") host_from=${HOST_FROM} source=${SOURCE} facility=${FACILITY} priority=${PRIORITY} message=${saved_message} _cef_eventtime_iso=${_cef.eventtime_iso})\\n---\\n")
+  );
+};
+
+# 2. CEF OpenObserve 送信
+destination d_openobserve_cef {
+  openobserve-log(
+    persist_name("openobserve_cef")
+    url("http://OpenObserve")
+    port(5080)
+    organization("default")
+    stream("syslog-ng")
+    user("root@root.root")
+    password("root")
+    time-zone("Asia/Tokyo")
+
+    # _cef.* をネストしてJSON化 + host_from, source, facility, priority, message, timestamp
+    body("$(format-json --key _cef.* --rekey . --exclude DATE --key ISODATE @timestamp=$(if (\"${.us_timestamp}\" != \"\") \"${.us_timestamp}\" \"${ISODATE}\") host_from=${HOST_FROM} source=${SOURCE} facility=${FACILITY} priority=${PRIORITY} message=${saved_message})")
+
+    disk-buffer(
+      reliable(yes)
+      mem-buf-size(1048576)
+      disk-buf-size(104857600)
+      dir("/buffer/to_OpenObserve_cef/")
+    )
+    workers(4)
+  );
+};
+
+# ---------------------------------------------------
 # json 構造化済みのログ用
+# ---------------------------------------------------
 destination d_openobserve_json {
   openobserve-log(
     persist_name("openobserve_json")
@@ -322,14 +599,11 @@ destination d_openobserve_json {
     user("root@root.root")
     password("root")
     time-zone("Asia/Tokyo")
-
-    # JSON 形式を指定
     body("${MESSAGE}")
-
     disk-buffer(
       reliable(yes)
-      mem-buf-size(1048576)      # メモリバッファサイズ: 1MB (一時的にメモリに保持するログのサイズ)
-      disk-buf-size(104857600)   # ディスクバッファサイズ: 100MB (OpenObserveが停止時のログ保持用)
+      mem-buf-size(1048576)
+      disk-buf-size(104857600)
       dir("/buffer/to_OpenObserve/")
     )
     workers(4)
@@ -346,7 +620,7 @@ log {
   source(s_fluent_bit);
   parser(p_json);
   destination(d_openobserve_json);
-  flags(final); # ここで処理完了とし、以降のlogブロックに進まない
+  flags(final);
 };
 
 # ---------------------------------------------------
@@ -354,13 +628,12 @@ log {
 # ---------------------------------------------------
 filter f_old_yamaha {
   host(^192.168.99.99$) or
-  host(^192.168.99.222$)   # RTX のアドレス
+  host(^192.168.99.222$)
 };
 
 log {
   source(s_rfc5424);
   filter(f_old_yamaha);
-  # PROGRAMとMESSAGEに分割されるので結合する
   rewrite {
     set("${PROGRAM} ${MESSAGE}", value("MESSAGE"));
     unset(value("PROGRAM"));
@@ -377,7 +650,44 @@ log {
   filter(f_fortigate);
   parser(p_fortigate);
   destination(d_openobserve);
-  flags(final);               # ここで処理完了
+  flags(final);
+};
+
+# ---------------------------------------------------
+# AlaxalA スイッチ専用パイプライン
+# ---------------------------------------------------
+log {
+  source(s_alaxala);
+  parser(p_alaxala);
+  destination(d_openobserve);
+  flags(final);
+};
+
+# ---------------------------------------------------
+# CentreCOM 機器専用パイプライン (IPアドレスでフィルタ)
+# ---------------------------------------------------
+log {
+  source(s_rfc5424);
+  filter(f_centrecom);
+  parser(p_centrecom);
+  destination(d_openobserve);
+  flags(final);
+};
+
+# ---------------------------------------------------
+# Palo Alto 機器専用パイプライン
+# ---------------------------------------------------
+# log {
+#   source(s_panos);
+#   destination(d_panos_raw);
+# };
+
+log {
+  source(s_panos);
+  parser(p_panos);
+  destination(d_openobserve);
+  # destination(d_panos_debug);
+  flags(final);
 };
 
 # ---------------------------------------------------
@@ -385,23 +695,34 @@ log {
 # ---------------------------------------------------
 log {
   source(s_cisco);
-  destination(d_cisco_raw);   # デバッグ用: RAW メッセージ出力（パース前）
-  parser(p_cisco);            # 構造化データ削除 + タイムスタンプ抽出 + cisco-parser
-  destination(d_cisco_file);  # ファイル出力（パース後、正しい時刻）
-  destination(d_openobserve); # OpenObserve へ送信
-  flags(final);               # ここで処理完了
+  destination(d_cisco_raw);
+  parser(p_cisco);
+  destination(d_cisco_file);
+  destination(d_openobserve);
+  flags(final);
 };
 
 # ---------------------------------------------------
 # それ以外の全てのログの処理
-# RFC 3164/5424 用のログパイプライン
 # ---------------------------------------------------
 log {
   source(s_rfc3164);
   source(s_rfc5424);
   source(s_rfc5424_octet);
   destination(d_openobserve);
-  flags(final);               # ここで処理完了
+  flags(final);
+};
+
+# ---------------------------------------------------
+# CEF ログ用パイプライン
+# ---------------------------------------------------
+log {
+  source(s_cef);
+  parser(p_cef);
+  parser(p_cef_timestamp);
+  destination(d_cef_debug);
+  destination(d_openobserve_cef);
+  flags(final);
 };
 
 #==================================
@@ -412,8 +733,8 @@ destination d_stdout { file("/dev/stdout"); };
 filter f_warnings    { level(warning..emerg); };
 
 log {
-    source(s_internal);
-    filter(f_warnings);
-    destination(d_stdout);
-    flags(final);
+  source(s_internal);
+  filter(f_warnings);
+  destination(d_stdout);
+  flags(final);
 };
