--- a/syslogng-openobserve/docker-compose.yml
+++ b/syslogng-openobserve/docker-compose.yml
@@ -9,14 +9,14 @@ services:
   # https://openobserve.ai/docs/guide/quickstart/#self-hosted-installation
   OpenObserve:
     # simd は AVX512 に対応していないと (Xeon とか) 動作しない
-    image: public.ecr.aws/zinclabs/openobserve:latest
+    image: public.ecr.aws/zinclabs/openobserve:v0.40.4
     container_name: OpenObserve
     ports:
       - 5080:5080
     volumes:
       - ./openobserve/data/:/data/
     environment:
-      - TZ=Asia/Tokyo
+      - TZ=${TZ:-Asia/Tokyo}
     env_file:
       - ./openobserve/.env
     user: '${UID:-1000}:${GID:-1000}'
@@ -30,13 +30,15 @@ services:
     environment:
       - PUID=${UID:-1000}
       - PGID=${GID:-1000}
-      - TZ=Asia/Tokyo
+      - TZ=${TZ:-Asia/Tokyo}
+      - SYSLOGNG_OPTS=-d
     volumes:
       - ./syslog-ng/conf/:/config/
       - ./syslog-ng/buffer/:/buffer/
+      - ./syslog-ng/conf/panos.conf:/usr/share/syslog-ng/include/scl/paloalto/panos.conf
     ports:
-      - 514:514/tcp    #  514/tcp RFC 5424 形式 改行区切り
-      - 514:514/udp    #  514/udp RFC 5424 形式
+      - 514:514/tcp    # 514/tcp RFC 5424 形式 改行区切り
+      - 514:514/udp    # 514/udp RFC 5424 形式
       - 2514:2514/tcp  # 2514/tcp RFC 5424 形式 octet-counted 用
       - 3514:3514/tcp  # 3514/tcp Cisco 用
       - 3514:3514/udp  # 3514/udp Cisco 用
@@ -44,9 +46,12 @@ services:
       - 4514:4514/udp  # 4514/udp RFC 3164 形式
       - 5514:5514/tcp  # 5514/tcp Fortigate 用
       - 5514:5514/udp  # 5514/udp Fortigate 用
+      - 5515:5515/tcp  # 5515/tcp Palo Alto 用
+      - 5515:5515/udp  # 5515/udp Palo Alto 用
       - 6514:6514/tcp  # 6514/tcp JSON 構造化ログを受け付ける
-
+      - 7514:7514/tcp  # 7514/tcp AlaxalA 用
+      - 7514:7514/udp  # 7514/udp AlaxalA 用
+      - 999:999/tcp    # 999/tcp CEF
       # - 6514:6514/tcp  # syslog TLS はきちんと設定していないので使えない
     restart: unless-stopped
     logging: *logging-def
-
