syslog-ng.conf の更新
- syslog-ng.conf:
  - CEF メッセージのパースを修正
  - 設定ファイルのフォーマット整形とクリーンアップ
- download_syslog.py:
  - 部分ダウンロード時の完了誤判定を修正
  - 空チャンク受信時のリトライ処理を追加
- .gitignore:
  - 一時ファイルの除外

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ syslogng-openobserve/syslog-ng/conf/syslog-ng.ctl
 # すべてのログファイルを無視...
 syslogng-openobserve/syslog-ng/conf/log/*
 !syslogng-openobserve/syslog-ng/conf/log/.gitkeep
+
+# Temporary files
+syslogng-openobserve/*.csv
+
+# CoreDNS build artifacts
+docker-coredns/coredns/
