--- a/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -26,26 +26,20 @@ options {
 #==================================
 # 1. ソース (受信)
 #==================================
-# ---------------------------------------------------
 # UDP/TCP 一般用 RFC 5424 用 改行区切り (514/udp,514/tcp)
-# ---------------------------------------------------
 source s_rfc5424 {
   network(ip(0.0.0.0) port(514) transport("udp") flags(syslog-protocol) log-msg-size(65536));
   network(ip(0.0.0.0) port(514) transport("tcp") flags(syslog-protocol) log-msg-size(65536));
 };
 
-# ---------------------------------------------------
 # RFC 5424 octet-counted 用 (2514/tcp)
-# ---------------------------------------------------
 source s_rfc5424_octet {
   syslog(
     ip(0.0.0.0) port(2514) transport("tcp") flags(syslog-protocol) log-msg-size(65536) max-connections(100)
   );
 };
 
-# ---------------------------------------------------
-# Cisco 機器専用 (3514/udp, 3514/tcp)
-# ---------------------------------------------------
+# Cisco 機器用 (3514/udp, 3514/tcp)
 source s_cisco {
   # Cisco は独自形式で送信してくるため、flags(no-parse, store-raw-message) を使用
   # cisco-parser() が全体をパースする
@@ -53,26 +47,20 @@ source s_cisco {
   network(ip(0.0.0.0) port(3514) transport("tcp") flags(no-parse, store-raw-message) log-msg-size(65536));
 };
 
-# ---------------------------------------------------
 # RFC 3164 (IXルーター等) 受信用 (4514/udp)
-# ---------------------------------------------------
 # flags(syslog-protocol) を*指定しない*
 source s_rfc3164 {
   network(ip(0.0.0.0) port(4514) transport("udp") log-msg-size(65536));
   network(ip(0.0.0.0) port(4514) transport("tcp") log-msg-size(65536));
 };
 
-# ---------------------------------------------------
 # TCP/UDP Fortigate 用 (5514/udp)
-# ---------------------------------------------------
 source s_fortigate {
   network(ip(0.0.0.0) port(5514) transport("udp") flags(no-parse, store-raw-message) log-msg-size(65536));
   network(ip(0.0.0.0) port(5514) transport("tcp") flags(no-parse, store-raw-message) log-msg-size(65536));
 };
 
-# ---------------------------------------------------
-# Palo Alto (PAN-OS) 専用 (5515/udp, 5515/tcp)
-# ---------------------------------------------------
+# Palo Alto (PAN-OS) 用 (5515/udp, 5515/tcp)
 source s_panos {
   network(
     port(5515)
@@ -88,30 +76,23 @@ source s_panos {
   );
 };
 
-# ---------------------------------------------------
 # JSON 構造化ログ受信用 Fluent-bit 等の出力を受ける (6514/tcp)
-# ---------------------------------------------------
 source s_fluent_bit {
   # Fluent-bit は RFC 5424 準拠なので syslog() のままでも可
   # network() に変更しても動作します
   network(ip(0.0.0.0) port(6514) flags(syslog-protocol) log-msg-size(65536));
 };
 
-# ---------------------------------------------------
-# AlaxalA スイッチ専用 (7514/udp, 7514/tcp)
-# ---------------------------------------------------
+# AlaxalA スイッチ用 (7514/udp, 7514/tcp)
 source s_alaxala {
   network(ip(0.0.0.0) port(7514) transport("udp") log-msg-size(65536));
   network(ip(0.0.0.0) port(7514) transport("tcp") log-msg-size(65536));
 };
 
-# ---------------------------------------------------
 # CEF ログ受信用 (999/tcp)
-# ---------------------------------------------------
 source s_cef {
-  network(ip(0.0.0.0) port(999) transport("tcp") log-msg-size(65536));
+  network(ip(0.0.0.0) port(999) transport("tcp") flags(no-parse) log-msg-size(65536) max-connections(200));
 };
-
 
 #==================================
 # 2. フィルタ (分類担当)
@@ -128,12 +109,21 @@ filter f_centrecom {
   # host("172.31.220.99") or host("172.31.220.100") or netmask("172.31.220.0/24");
 };
 
+# YAMAHA RTX 用 (旧)
+filter f_old_yamaha {
+  host(^192.168.99.99$) or
+  host(^192.168.99.222$)
+};
+
+# Palo Alto 用フィルタ (SYSTEM, TRAFFIC, THREAT, CONFIG)
+filter f_paloalto {
+  message(",SYSTEM,") or message(",TRAFFIC,") or message(",THREAT,") or message(",CONFIG,");
+};
+
 #==================================
 # 3. パーサー (項目の分解)
 #==================================
-# ---------------------------------------------------
-# Cisco 専用パーサー (構造化データ + メッセージパース)
-# ---------------------------------------------------
+# Cisco 用パーサー (構造化データ + メッセージパース)
 parser p_cisco {
   channel {
     # 1. 構造化データ部分を抽出（あればマッチ、なければスキップ）
@@ -266,9 +256,7 @@ parser p_cisco {
   };
 };
 
-# ---------------------------------------------------
-# CentreCOM 専用パーサー
-# ---------------------------------------------------
+# CentreCOM 用パーサー
 parser p_centrecom {
   channel {
     # 1. CentreCOMフォーマットをパース
@@ -303,7 +291,7 @@ parser p_centrecom {
       set("${pid}", value(".SDATA.meta.pid") condition("${pid}" ne ""));
     };
     
-    # 4. 不要なフィールドを削除
+    # 6. 不要なフィールドを削除
     rewrite {
       unset(value("year"));
       unset(value("month"));
@@ -317,14 +305,10 @@ parser p_centrecom {
   };
 };
 
-# ---------------------------------------------------
-# FortiGateログ専用パーサー
-# ---------------------------------------------------
+# FortiGate 用パーサー
 parser p_fortigate {fortigate-parser();};
 
-# ---------------------------------------------------
-# AlaxalA 専用パーサー
-# ---------------------------------------------------
+# AlaxalA 用パーサー
 parser p_alaxala {
   channel {
     parser {
@@ -366,14 +350,10 @@ parser p_alaxala {
   };
 };
 
-# ---------------------------------------------------
-# JSON形形式を解釈するパーサー
-# ---------------------------------------------------
+# JSON 用パーサー
 parser p_json {json-parser();};
 
-# ---------------------------------------------------
-# Palo Alto (PAN-OS) 専用パーサー
-# ---------------------------------------------------
+# Palo Alto (PAN-OS) 用パーサー
 parser p_panos {
   channel {
     parser {
@@ -382,26 +362,24 @@ parser p_panos {
   };
 };
 
-# ---------------------------------------------------
-# CEF Parser
-# ---------------------------------------------------
+# CEF 用パーサー
 parser p_cef {
   channel {
     parser {
       regexp-parser(
-        patterns('^(?:CEF:(?<cef_version>[^\|]+)\|)?(?<device_vendor>[^\|]*)\|(?<device_product>[^\|]*)\|(?<device_version>[^\|]*)\|(?<device_event_class_id>[^\|]*)\|(?<name>[^\|]*)\|(?<severity>[^\|]*)\|(?<cef_extension>.*)')
+        patterns('.*CEF:(?<cef_version>[^|]+)[|](?<device_vendor>[^|]*)[|](?<device_product>[^|]*)[|](?<device_version>[^|]*)[|](?<device_event_class_id>[^|]*)[|](?<name>[^|]*)[|](?<severity>[^|]*)[|](?<cef_extension>.*)')
         prefix("_cef.")
       );
     };
-    # 1.5. 元のMESSAGEを退避 (JSON出力の message フィールド用)
+    # 2. 元のMESSAGEを退避 (JSON出力の message フィールド用)
     rewrite {
       set("${MESSAGE}", value("saved_message"));
     };
-    # 2. MESSAGEを拡張フィールド部分に書き換え (以降のKVパース用)
+    # 3. MESSAGEを拡張フィールド部分に書き換え (以降のKVパース用)
     rewrite {
       set("${_cef.cef_extension}", value("MESSAGE"));
     };
-    # 3. KVペアとしてパース
+    # 4. KVペアとしてパース
     parser {
       kv-parser(
         prefix("_cef.")
@@ -409,12 +387,12 @@ parser p_cef {
       );
     };
 
-    # 4. agentRt があればマイクロ秒に変換してタイムスタンプ用変数を設定
+    # 5. agentRt があればマイクロ秒に変換してタイムスタンプ用変数を設定
     rewrite {
       set("${_cef.agentRt}000", value(".us_timestamp") condition("${_cef.agentRt}" ne ""));
     };
 
-    # 4. 不要なフィールドの削除
+    # 6. 不要なフィールドの削除
     rewrite {
       unset(value("_cef.cef_extension"));
       unset(value("0"));
@@ -433,9 +411,7 @@ parser p_cef {
   };
 };
 
-# ---------------------------------------------------
-# CEF タイムスタンプ変換用パーサー (Refactored)
-# ---------------------------------------------------
+# CEF タイムスタンプ変換用パーサー
 parser p_cef_timestamp {
   channel {
     # eventtime (小文字) と eventTime (CamelCase) の両方をチェックして tmp_epoch にセット
@@ -471,16 +447,12 @@ parser p_cef_timestamp {
   };
 };
 
-filter f_paloalto {
-  message(",SYSTEM,") or message(",TRAFFIC,") or message(",THREAT,") or message(",CONFIG,");
-};
+
 
 #==================================
 # 4. 宛先 (送信)
 #==================================
-# ---------------------------------------------------
 # OpenObserve に送る
-# ---------------------------------------------------
 destination d_openobserve {
   openobserve-log(
     persist_name("openobserve")
@@ -502,66 +474,7 @@ destination d_openobserve {
   );
 };
 
-# ---------------------------------------------------
-# Cisco ログ用デスティネーション
-# ---------------------------------------------------
-
-# 1. Cisco ログ専用ファイル出力
-destination d_cisco_file {
-  file(
-    "/config/log/cisco.log"
-    template("${ISODATE} ${HOST} ${MSGHDR}${MESSAGE}\n")
-    ts-format(iso)
-    time-zone("Asia/Tokyo")
-    create-dirs(yes)
-  );
-};
-
-# 2. Cisco デバッグ用 - RAW メッセージを出力
-destination d_cisco_raw {
-  file(
-    "/config/log/cisco_raw.log"
-    template("RAW: ${RAWMSG}\nMSG: ${MESSAGE}\nSOURCE: ${SOURCE}\n---\n")
-    create-dirs(yes)
-  );
-};
-
-# ---------------------------------------------------
-# Palo Alto (PAN-OS) ログ用デスティネーション
-# ---------------------------------------------------
-
-# 1. Palo Alto デバッグ用 (無効化)
-# destination d_panos_debug {
-#   file(
-#     "/config/log/panos_debug.log"
-#     template("TS:${ISODATE} HOST:${HOST} PROG:${PROGRAM} MSG:${MESSAGE}\nRAW:${RAWMSG}\n---\n")
-#     create-dirs(yes)
-#   );
-# };
-
-# 2. Palo Alto 生ログ記録用 (無効化)
-# destination d_panos_raw {
-#   file(
-#     "/config/log/panos_raw.log"
-#     template("${MESSAGE}\n")
-#     create-dirs(yes)
-#   );
-# };
-
-# ---------------------------------------------------
-# CEFログ用デスティネーション
-# ---------------------------------------------------
-
-# 1. CEF デバッグ用 (ファイル出力 / 無効化中)
-destination d_cef_debug {
-  file(
-    "/config/log/cef_debug.log"
-    # format-json のオプション調整: @timestamp を agentRt優先に変更
-    template("JSON:$(format-json --key _cef.* --rekey . --exclude DATE --key ISODATE @timestamp=$(if (\"${.us_timestamp}\" != \"\") \"${.us_timestamp}\" \"${ISODATE}\") host_from=${HOST_FROM} source=${SOURCE} facility=${FACILITY} priority=${PRIORITY} message=${saved_message} _cef_eventtime_iso=${_cef.eventtime_iso})\\n---\\n")
-  );
-};
-
-# 2. CEF OpenObserve 送信
+# CEFログ用デスティネーション (OpenObserve)
 destination d_openobserve_cef {
   openobserve-log(
     persist_name("openobserve_cef")
@@ -574,7 +487,7 @@ destination d_openobserve_cef {
     time-zone("Asia/Tokyo")
 
     # _cef.* をネストしてJSON化 + host_from, source, facility, priority, message, timestamp
-    body("$(format-json --key _cef.* --rekey . --exclude DATE --key ISODATE @timestamp=$(if (\"${.us_timestamp}\" != \"\") \"${.us_timestamp}\" \"${ISODATE}\") host_from=${HOST_FROM} source=${SOURCE} facility=${FACILITY} priority=${PRIORITY} message=${saved_message})")
+    body("$(format-json --key _cef.* --rekey . --exclude DATE --key ISODATE @timestamp=${.final_timestamp} host_from=${HOST_FROM} source=${SOURCE} facility=${FACILITY} priority=${PRIORITY} message=${saved_message})")
 
     disk-buffer(
       reliable(yes)
@@ -586,9 +499,12 @@ destination d_openobserve_cef {
   );
 };
 
-# ---------------------------------------------------
+# デバッグ用: CEFログをローカルファイルにも出力 (テール確認用)
+destination d_cef_debug {
+  file("/buffer/cef_debug.log" template("--------------------------------------------------------------------------------\n[RAW INPUT]\n${saved_message}\n\n[JSON OUTPUT]\n$(format-json --key _cef.* --rekey . --exclude DATE --key ISODATE @timestamp=${.final_timestamp} host_from=${HOST_FROM} source=${SOURCE} facility=${FACILITY} priority=${PRIORITY} message=${saved_message})\n--------------------------------------------------------------------------------\n\n"));
+};
+
 # json 構造化済みのログ用
-# ---------------------------------------------------
 destination d_openobserve_json {
   openobserve-log(
     persist_name("openobserve_json")
@@ -613,9 +529,7 @@ destination d_openobserve_json {
 #==================================
 # 5. ログ処理のパイプライン定義
 #==================================
-# ---------------------------------------------------
 # json 構造化ログ受信用
-# ---------------------------------------------------
 log {
   source(s_fluent_bit);
   parser(p_json);
@@ -623,14 +537,7 @@ log {
   flags(final);
 };
 
-# ---------------------------------------------------
 # YAMAHA RTX 用
-# ---------------------------------------------------
-filter f_old_yamaha {
-  host(^192.168.99.99$) or
-  host(^192.168.99.222$)
-};
-
 log {
   source(s_rfc5424);
   filter(f_old_yamaha);
@@ -642,9 +549,7 @@ log {
   flags(final);
 };
 
-# ---------------------------------------------------
 # Fortigate 用
-# ---------------------------------------------------
 log {
   source(s_fortigate);
   filter(f_fortigate);
@@ -653,9 +558,7 @@ log {
   flags(final);
 };
 
-# ---------------------------------------------------
-# AlaxalA スイッチ専用パイプライン
-# ---------------------------------------------------
+# AlaxalA スイッチ用パイプライン
 log {
   source(s_alaxala);
   parser(p_alaxala);
@@ -663,9 +566,7 @@ log {
   flags(final);
 };
 
-# ---------------------------------------------------
-# CentreCOM 機器専用パイプライン (IPアドレスでフィルタ)
-# ---------------------------------------------------
+# CentreCOM 機器用パイプライン (IPアドレスでフィルタ)
 log {
   source(s_rfc5424);
   filter(f_centrecom);
@@ -674,37 +575,23 @@ log {
   flags(final);
 };
 
-# ---------------------------------------------------
-# Palo Alto 機器専用パイプライン
-# ---------------------------------------------------
-# log {
-#   source(s_panos);
-#   destination(d_panos_raw);
-# };
-
+# Palo Alto 機器用パイプライン
 log {
   source(s_panos);
   parser(p_panos);
   destination(d_openobserve);
-  # destination(d_panos_debug);
   flags(final);
 };
 
-# ---------------------------------------------------
-# Cisco 機器専用パイプライン
-# ---------------------------------------------------
+# Cisco 機器用パイプライン
 log {
   source(s_cisco);
-  destination(d_cisco_raw);
   parser(p_cisco);
-  destination(d_cisco_file);
   destination(d_openobserve);
   flags(final);
 };
 
-# ---------------------------------------------------
 # それ以外の全てのログの処理
-# ---------------------------------------------------
 log {
   source(s_rfc3164);
   source(s_rfc5424);
@@ -713,15 +600,22 @@ log {
   flags(final);
 };
 
-# ---------------------------------------------------
+# CEF ログ用 Timestamp 最終決定
+rewrite r_cef_final_timestamp {
+  # デフォルトは ISODATE (受信時刻 or p_cef_timestampの結果)
+  set("${ISODATE}", value(".final_timestamp"));
+  # .us_timestamp (agentRt由来) があれば優先
+  set("${.us_timestamp}", value(".final_timestamp") condition("${.us_timestamp}" ne ""));
+};
+
 # CEF ログ用パイプライン
-# ---------------------------------------------------
 log {
   source(s_cef);
   parser(p_cef);
   parser(p_cef_timestamp);
-  destination(d_cef_debug);
+  rewrite(r_cef_final_timestamp);
   destination(d_openobserve_cef);
+  destination(d_cef_debug);
   flags(final);
 };
 
