Add unified host field extraction for all syslog sources
- Add host field to d_openobserve and d_openobserve_cef destinations
- Extract hostname from syslog header in CEF parser (p_cef)
- Enable debug mode in docker-compose.yml (SYSLOGNG_OPTS=-d)
- Fix stream name from 'syslog-ng' to 'syslog_ng' for OpenObserve compatibility

This ensures all logs have a consistent 'host' field for filtering,
extracted from the standard syslog HOST field (e.g., test-Stellar)

--- a/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -463,7 +463,7 @@ destination d_openobserve {
     user("root@root.root")
     password("root")
     time-zone("Asia/Tokyo")
-    record("--scope rfc5424 --scope all-nv-pairs --exclude DATE --key ISODATE @timestamp=${ISODATE}")
+    record("--scope rfc5424 --scope all-nv-pairs --exclude DATE --key ISODATE @timestamp=${ISODATE} host=${HOST}")
     disk-buffer(
       reliable(yes)
       mem-buf-size(1048576)
@@ -487,7 +487,7 @@ destination d_openobserve_cef {
     time-zone("Asia/Tokyo")
 
     # _cef.* をネストしてJSON化 + host_from, source, facility, priority, message, timestamp
-    body("$(format-json --key _cef.* --rekey . --exclude DATE --key ISODATE @timestamp=${.final_timestamp} host_from=${HOST_FROM} source=${SOURCE} facility=${FACILITY} priority=${PRIORITY} message=${saved_message})")
+    body("$(format-json --key _cef.* --rekey . --exclude DATE --key ISODATE @timestamp=${.final_timestamp} host=${HOST} host_from=${HOST_FROM} source=${SOURCE} facility=${FACILITY} priority=${PRIORITY} message=${saved_message})")
 
     disk-buffer(
       reliable(yes)
